# vsTest_OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  MDVConfig.h.in  Makefile  README.md  configure.bat  main.cpp  mdv.txt  test.cpp
include/glad/: glad.h
include/users/: animation.h  cam.h  camera.h  data.h  geometry.h  interactive.h  light.h  material.h  mesh.h  model.h  mrp.h  object.h  shader.h  shaderV2.h  stb_image.h  texture.h  transform.h  ui.h
install/resources/models/: Sausage_33.fbx
install/resources/shaders/fragment/: shd_simple_v2.frag  shd_simple_v3.frag
install/resources/shaders/vertex/: chicken01.vert
install/resources/textures/: Gloves_33_D.psd  Gloves_33_M.psd  Gloves_33_N.psd
mdv/lib/pkgconfig/: glfw3.pc
mdv/resources/shaders/vertex/: shd_simple_v1.vert
resources/models/: sausage_Model.fbx
resources/shaders/fragment/: chicken01.frag  shd_simple_v2.frag  shd_simple_v3.frag
resources/shaders/vertex/: chicken01.vert  shd_simple_v2.vert
resources/textures/: Shoe_33.psd  Suit_10_D.psd  Suit_33_M.psd  Suit_33_N.psd
src/: CMakeLists.txt  animation.cpp  cam.cpp  camera.cpp  data.cpp  geometry.cpp  interactive.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  mrp.cpp  object.cpp  shader.cpp  shaderV2.cpp  texture.cpp  transform.cpp  ui.cpp
src/shaders/: shd_simple_v1.frag  shd_simple_v1.vert
